# family-events

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CONTEXT.md  DESIGN_AUTH.md  Dockerfile  MVP.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  family-events-cron.service  family-events.service  main.py  package-lock.json  package.json  pyproject.toml  railway.cron.toml  railway.toml  railway.web.toml  tailwind.config.js
.cursor/hooks/state/: continual-learning.json
.github/workflows/: railway-deploy.yml
alembic/: env.py
alembic/versions/: 3d7f85fe4c1a_add_user_event_state_followup.py  8c0f9f8b1f6b_add_city_slug_followup.py  91dae90b6493_create_initial_postgres_schema.py
docs/: architecture.md  codebase-audit-2026-03-08.md  design-generic-scraper.md  frontend.md  migration.md  pipeline.md  railway.md  runbook.md
scripts/: format_misc.py  migrate_sqlite_to_postgres.py  railway-entrypoint.sh  railway-pull-config.sh
src/: cities.py  config.py  cron.py  http.py  main.py  observability.py  onboarding.py  predefined_sources.py  scheduler.py  timezones.py  utils.py
src/db/: common.py  database.py  migrations.py  models.py  postgres.py  schema.py  session.py
src/notifications/: console.py  dispatcher.py  email.py  formatter.py  sms.py  telegram.py
src/ranker/: scoring.py  weather.py
src/scrapers/: __init__.py  allevents.py  analyzer.py  base.py  brec.py  eventbrite.py  generic.py  lafayette.py  library.py  recipe.py  router.py
src/tagger/: llm.py  taxonomy.py
src/web/: app.py  auth.py  common.py  jobs.py  jobs_ui.py  middleware.py
src/web/routes/: auth.py  calendar.py  events.py  jobs.py  pages.py  pipeline.py  profile.py  sources.py
src/web/static/: app.js  input.css  styles.css
src/web/templates/: 404.html  500.html  base.html  calendar.html  dashboard.html  event_detail.html  events.html  jobs.html  login.html  profile.html  signup.html  source_detail.html  sources.html  weekend.html
src/web/templates/components/: _macros.html
src/web/templates/partials/: _calendar_grid.html  _calendar_shell.html  _event_attendance.html  _event_card.html  _event_row.html  _events_table.html  _job_status.html  _notification.html  _profile_status.html  _skeleton_action.html  _skeleton_table.html  _stats.html  (+3 more)
tests/: conftest.py  postgres_test_helpers.py  test_alembic_migrations.py  test_jobs.py  test_main.py  test_notifications.py  test_observability.py  test_observability_logging.py  test_onboarding.py  test_pipeline.py  test_ranking.py  test_search.py  test_security.py  test_source_routes.py  test_tagger.py  test_timezones_edge_cases.py
